--- a/appconfigservice-dev.yml
+++ b/appconfigservice-dev.yml
@@ -1,13 +1,13 @@
 Info:
   Description: appconfigserviceDev
-  MpServicesBaseUrl: https://appconfigservice.tst.gm.com
-  DealerServicesBaseUrl: https://appconfigservice-prdm.gm.com/v2
-  ConfgurationServicesBaseUrl: https://appconfigservice-dev.apps.pcfepg2wi.gm.com/api/configuration
+  MpServicesBaseUrl: https://appconfigservice.tst.foo.com
+  DealerServicesBaseUrl: https://appconfigservice-prdm.foo.com/v2
+  ConfgurationServicesBaseUrl: https://appconfigservice-dev.apps.foo.com/api/configuration
   AuthTokenClientId: appconfigserviceUser
   AuthTokenClientSecret: ssdfsrfrgres
   AuthTokenClientGrantType: client_credentials
-  MpLayer7ServicesBaseUrl: https://appconfigservice-gmb2c.tst.gm.com
-  SpockGatewayUrl: https://appconfigserviceapigateway-dev.apps.pcfepgw.gm.com/api/proxy
+  MpLayer7ServicesBaseUrl: https://appconfigservice-dev.foo.com
+  SpockGatewayUrl: https://appconfigserviceapigateway-dev.apps.pcfepgw.foo.com/api/proxy
   IsDevelopment: true
-  Layer7Username: appconfigservice_PPLayer7
+  Layer7Username: appconfigservice_PPLa
   Layer7Secret: NobJsA4Ve780c81Stdcesoa
